HiDRA develop
HiDRA 3.1.1
HiDRA 3.1.0

- Adjusted host names in mapping for control API
- Run control server as user hidra
- RPM: Split single package into multiple subpackages (hidra, python-hidra, hidra-control-client)
- Fixed logging in transfer when logutils is used
- Updated requirement version of zmq in spec
- Transfer API responds to confirmation requests after data handling
- Control server sets subdirectories <commissioning|current>/scratch_bl and <commissioning|current>/raw instead of commissioning and current
- Path names have always unix format (even when send from windows)
- Added parameter test to DataManager
- Removed setup method in data fetchers
- Fixed data socket reconnection after netgroup change
- Notice netgroup changes during runtime
- Fixed relative path starting with a backslash in transfer
- Changed structure of event detectors to inherit from a base class
- Converted data fetchers to classes which inherit from a base class
- Added first versions of event detectors and data fetchers for using HiDRA in series
- Fixed file closing if message size equals chunksize (Transfer)
- Renamed Eiger specific parameters to be more generic
- Removed old beamline specific control clients
- Renamed options in hidra control
- Added support for configuration of multiple detector with one HiDRA control
- Added procname to init script
- Added msi building support for freeze
- HiDRA control: Exchanged normal socket communication with ZMQ communication
- Added Dockerfiles for sender, receiver and API usage (based on Ubuntu)
- Added platform specific config file to freeze
- Changed meaning when whitelist is to None in datamanager config
- Added option "getsettings" to init script (SuSE)
- Fixed start of transfer API if one host in whitelist id not known
- Metadata dict as call by reference for datafetcher modules
- Automatic beamline extraction from config dict (in _constants.py )for hidra control
- Fixed examples and generalized them